packages/lightning_db_dart/src/lightning_db_ffi.h

typedef uint64_t DatabaseHandle;
typedef uint64_t TransactionHandle;
typedef uint64_t IteratorHandle;
typedef enum CompressionType {
  CompressionTypeNone = 0,
  CompressionTypeZstd = 1,
  CompressionTypeLz4 = 2,
  CompressionTypeSnappy = 3,
} CompressionType;
typedef enum ConsistencyLevel {
  ConsistencyLevelEventual = 0,
  ConsistencyLevelStrong = 1,
} ConsistencyLevel;
typedef enum ErrorCode {
  ErrorCodeSuccess = 0,
  ErrorCodeInvalidArgument = 1,
  ErrorCodeDatabaseNotFound = 2,
  ErrorCodeDatabaseExists = 3,
  ErrorCodeTransactionNotFound = 4,
  ErrorCodeTransactionConflict = 5,
  ErrorCodeKeyNotFound = 6,
  ErrorCodeIoError = 7,
  ErrorCodeCorruptedData = 8,
  ErrorCodeOutOfMemory = 9,
  ErrorCodeBufferOverflow = 10,
  ErrorCodeInvalidPointer = 11,
  ErrorCodeInvalidAlignment = 12,
  ErrorCodeInvalidUtf8 = 13,
  ErrorCodeIntegerOverflow = 14,
  ErrorCodeBufferTooLarge = 15,
  ErrorCodeStringTooLong = 16,
  ErrorCodeInvalidHandle = 17,
  ErrorCodeSecurityViolation = 18,
  ErrorCodePanicPrevented = 19,
  ErrorCodeUnknown = 999,
} ErrorCode;
typedef enum WalSyncMode {
  WalSyncModeSync = 0,
  WalSyncModePeriodic = 1,
  WalSyncModeAsync = 2,
} WalSyncMode;
/**
 * Result structure for returning data across FFI boundary
 */
typedef struct ByteResult {
  uint8_t *DATA;
  uintptr_t LEN;
  int32_t ERROR_CODE;
} ByteResult;
/**
 * Key-value pair result for iterator
 */
typedef struct KeyValueResult {
  uint8_t *KEY;
  uintptr_t KEY_LEN;
  uint8_t *VALUE;
  uintptr_t VALUE_LEN;
  int32_t ERROR_CODE;
} KeyValueResult;
/**
 * Create an iterator for scanning a range of keys
 *
 * # Safety
 * - start_key/end_key must be valid for their respective lengths (can be null for unbounded)
 * - Returns 0 on success with iterator handle stored in out_handle, error code on failure
 */
FFI_PLUGIN_EXPORT 
int32_t lightning_db_scan(uint64_t db_handle,
                          const uint8_t *start_key,
                          uintptr_t start_key_len,
                          const uint8_t *end_key,
                          uintptr_t end_key_len,
                          uint64_t *out_handle);
/**
 * Get the next key-value pair from an iterator
 *
 * # Safety
 * - The iterator handle must be valid
 * - The returned KeyValueResult must be freed using lightning_db_free_key_value
 */
FFI_PLUGIN_EXPORT  struct KeyValueResult lightning_db_iterator_next(uint64_t iter_handle);
/**
 * Close an iterator and free its resources
 *
 * # Safety
 * - The handle must be valid
 * - The handle must not be used after calling this function
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_iterator_close(uint64_t iter_handle);
/**
 * Free a key-value result
 *
 * # Safety
 * - The result must have been returned by lightning_db_iterator_next
 * - The result must not be used after calling this function
 */
FFI_PLUGIN_EXPORT  void lightning_db_free_key_value(struct KeyValueResult result);
/**
 * Begin a new transaction
 *
 * # Safety
 * - The database handle must be valid
 * - Returns 0 on success with transaction handle stored in out_handle, error code on failure
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_begin_transaction(uint64_t db_handle, uint64_t *out_handle);
/**
 * Commit a transaction
 *
 * # Safety
 * - The transaction handle must be valid
 * - The handle must not be used after calling this function
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_commit_transaction(uint64_t tx_handle);
/**
 * Abort a transaction
 *
 * # Safety
 * - The transaction handle must be valid
 * - The handle must not be used after calling this function
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_abort_transaction(uint64_t tx_handle);
/**
 * Put a key-value pair within a transaction
 *
 * # Safety
 * - key must be valid for key_len bytes
 * - value must be valid for value_len bytes
 */
FFI_PLUGIN_EXPORT 
int32_t lightning_db_put_tx(uint64_t tx_handle,
                            const uint8_t *key,
                            uintptr_t key_len,
                            const uint8_t *value,
                            uintptr_t value_len);
/**
 * Get a value within a transaction
 *
 * # Safety
 * - key must be valid for key_len bytes
 * - The returned ByteResult must be freed using lightning_db_free_bytes
 */
FFI_PLUGIN_EXPORT 
struct ByteResult lightning_db_get_tx(uint64_t tx_handle,
                                      const uint8_t *key,
                                      uintptr_t key_len);
/**
 * Delete a key within a transaction
 *
 * # Safety
 * - key must be valid for key_len bytes
 */
FFI_PLUGIN_EXPORT 
int32_t lightning_db_delete_tx(uint64_t tx_handle,
                               const uint8_t *key,
                               uintptr_t key_len);
/**
 * Free a string allocated by this library
 *
 * # Safety
 * - The pointer must have been allocated by this library
 * - The pointer must not be used after calling this function
 */
FFI_PLUGIN_EXPORT  void lightning_db_free_string(char *ptr);
/**
 * Free bytes allocated by this library with validation
 *
 * # Safety
 * - The pointer must have been allocated by this library with the given length
 * - The pointer must not be used after calling this function
 */
FFI_PLUGIN_EXPORT  void lightning_db_free_bytes(uint8_t *ptr, uintptr_t len);