lightning_db_dart/lib/lightning_db_bindings_generated.dart


  /// Create an iterator for scanning a range of keys
  ///
  /// # Safety
  /// - start_key/end_key must be valid for their respective lengths (can be null for unbounded)
  /// - Returns 0 on success with iterator handle stored in out_handle, error code on failure
  int lightning_db_scan(
    int db_handle,
    ffi.Pointer<ffi.Uint8> start_key,
    int start_key_len,
    ffi.Pointer<ffi.Uint8> end_key,
    int end_key_len,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_scan(
      db_handle,
      start_key,
      start_key_len,
      end_key,
      end_key_len,
      out_handle,
    );
  }

  late final _lightning_db_scanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_scan');
  late final _lightning_db_scan = _lightning_db_scanPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>,
          int, ffi.Pointer<ffi.Uint64>)>();

  /// Get the next key-value pair from an iterator
  ///
  /// # Safety
  /// - The iterator handle must be valid
  /// - The returned KeyValueResult must be freed using lightning_db_free_key_value
  KeyValueResult lightning_db_iterator_next(
    int iter_handle,
  ) {
    return _lightning_db_iterator_next(
      iter_handle,
    );
  }

  late final _lightning_db_iterator_nextPtr =
      _lookup<ffi.NativeFunction<KeyValueResult Function(ffi.Uint64)>>(
          'lightning_db_iterator_next');
  late final _lightning_db_iterator_next =
      _lightning_db_iterator_nextPtr.asFunction<KeyValueResult Function(int)>();

  /// Close an iterator and free its resources
  ///
  /// # Safety
  /// - The handle must be valid
  /// - The handle must not be used after calling this function
  int lightning_db_iterator_close(
    int iter_handle,
  ) {
    return _lightning_db_iterator_close(
      iter_handle,
    );
  }

  late final _lightning_db_iterator_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_iterator_close');
  late final _lightning_db_iterator_close =
      _lightning_db_iterator_closePtr.asFunction<int Function(int)>();

  /// Free a key-value result
  ///
  /// # Safety
  /// - The result must have been returned by lightning_db_iterator_next
  /// - The result must not be used after calling this function
  void lightning_db_free_key_value(
    KeyValueResult result,
  ) {
    return _lightning_db_free_key_value(
      result,
    );
  }

  late final _lightning_db_free_key_valuePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(KeyValueResult)>>(
          'lightning_db_free_key_value');
  late final _lightning_db_free_key_value = _lightning_db_free_key_valuePtr
      .asFunction<void Function(KeyValueResult)>();

  /// Begin a new transaction
  ///
  /// # Safety
  /// - The database handle must be valid
  /// - Returns 0 on success with transaction handle stored in out_handle, error code on failure
  int lightning_db_begin_transaction(
    int db_handle,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_begin_transaction(
      db_handle,
      out_handle,
    );
  }

  late final _lightning_db_begin_transactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_begin_transaction');
  late final _lightning_db_begin_transaction =
      _lightning_db_begin_transactionPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Uint64>)>();

  /// Commit a transaction
  ///
  /// # Safety
  /// - The transaction handle must be valid
  /// - The handle must not be used after calling this function
  int lightning_db_commit_transaction(
    int tx_handle,
  ) {
    return _lightning_db_commit_transaction(
      tx_handle,
    );
  }

  late final _lightning_db_commit_transactionPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_commit_transaction');
  late final _lightning_db_commit_transaction =
      _lightning_db_commit_transactionPtr.asFunction<int Function(int)>();

  /// Abort a transaction
  ///
  /// # Safety
  /// - The transaction handle must be valid
  /// - The handle must not be used after calling this function
  int lightning_db_abort_transaction(
    int tx_handle,
  ) {
    return _lightning_db_abort_transaction(
      tx_handle,
    );
  }

  late final _lightning_db_abort_transactionPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_abort_transaction');
  late final _lightning_db_abort_transaction =
      _lightning_db_abort_transactionPtr.asFunction<int Function(int)>();

  /// Put a key-value pair within a transaction
  ///
  /// # Safety
  /// - key must be valid for key_len bytes
  /// - value must be valid for value_len bytes
  int lightning_db_put_tx(
    int tx_handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> value,
    int value_len,
  ) {
    return _lightning_db_put_tx(
      tx_handle,
      key,
      key_len,
      value,
      value_len,
    );
  }

  late final _lightning_db_put_txPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>('lightning_db_put_tx');
  late final _lightning_db_put_tx = _lightning_db_put_txPtr.asFunction<
      int Function(
          int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int)>();

  /// Get a value within a transaction
  ///
  /// # Safety
  /// - key must be valid for key_len bytes
  /// - The returned ByteResult must be freed using lightning_db_free_bytes
  ByteResult lightning_db_get_tx(
    int tx_handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) {
    return _lightning_db_get_tx(
      tx_handle,
      key,
      key_len,
    );
  }

  late final _lightning_db_get_txPtr = _lookup<
      ffi.NativeFunction<
          ByteResult Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('lightning_db_get_tx');
  late final _lightning_db_get_tx = _lightning_db_get_txPtr
      .asFunction<ByteResult Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  /// Delete a key within a transaction
  ///
  /// # Safety
  /// - key must be valid for key_len bytes
  int lightning_db_delete_tx(
    int tx_handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) {
    return _lightning_db_delete_tx(
      tx_handle,
      key,
      key_len,
    );
  }

  late final _lightning_db_delete_txPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('lightning_db_delete_tx');
  late final _lightning_db_delete_tx = _lightning_db_delete_txPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  /// Free a string allocated by this library
  ///
  /// # Safety
  /// - The pointer must have been allocated by this library
  /// - The pointer must not be used after calling this function
  void lightning_db_free_string(
    ffi.Pointer<ffi.Char> ptr,
  ) {
    return _lightning_db_free_string(
      ptr,
    );
  }

  late final _lightning_db_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'lightning_db_free_string');
  late final _lightning_db_free_string = _lightning_db_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Free bytes allocated by this library
  ///
  /// # Safety
  /// - The pointer must have been allocated by this library with the given length
  /// - The pointer must not be used after calling this function
  void lightning_db_free_bytes(
    ffi.Pointer<ffi.Uint8> ptr,
    int len,
  ) {
    return _lightning_db_free_bytes(
      ptr,
      len,
    );
  }

  late final _lightning_db_free_bytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>('lightning_db_free_bytes');
  late final _lightning_db_free_bytes = _lightning_db_free_bytesPtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>, int)>();
}

typedef DatabaseHandle = ffi.Uint64;
typedef DartDatabaseHandle = int;
typedef TransactionHandle = ffi.Uint64;
typedef DartTransactionHandle = int;
typedef IteratorHandle = ffi.Uint64;
typedef DartIteratorHandle = int;

enum CompressionType {
  CompressionTypeNone(0),
  CompressionTypeZstd(1),
  CompressionTypeLz4(2),
  CompressionTypeSnappy(3);

  final int value;
  const CompressionType(this.value);

  static CompressionType fromValue(int value) => switch (value) {
        0 => CompressionTypeNone,
        1 => CompressionTypeZstd,
        2 => CompressionTypeLz4,
        3 => CompressionTypeSnappy,
        _ => throw ArgumentError('Unknown value for CompressionType: $value'),
      };
}

enum ConsistencyLevel {
  ConsistencyLevelEventual(0),
  ConsistencyLevelStrong(1);

  final int value;
  const ConsistencyLevel(this.value);

  static ConsistencyLevel fromValue(int value) => switch (value) {
        0 => ConsistencyLevelEventual,
        1 => ConsistencyLevelStrong,
        _ => throw ArgumentError('Unknown value for ConsistencyLevel: $value'),
      };
}

enum ErrorCode {
  ErrorCodeSuccess(0),
  ErrorCodeInvalidArgument(1),
  ErrorCodeDatabaseNotFound(2),
  ErrorCodeDatabaseExists(3),
  ErrorCodeTransactionNotFound(4),
  ErrorCodeTransactionConflict(5),
  ErrorCodeKeyNotFound(6),
  ErrorCodeIoError(7),
  ErrorCodeCorruptedData(8),
  ErrorCodeOutOfMemory(9),
  ErrorCodeUnknown(999);

  final int value;
  const ErrorCode(this.value);

  static ErrorCode fromValue(int value) => switch (value) {
        0 => ErrorCodeSuccess,
        1 => ErrorCodeInvalidArgument,
        2 => ErrorCodeDatabaseNotFound,
        3 => ErrorCodeDatabaseExists,
        4 => ErrorCodeTransactionNotFound,
        5 => ErrorCodeTransactionConflict,
        6 => ErrorCodeKeyNotFound,
        7 => ErrorCodeIoError,
        8 => ErrorCodeCorruptedData,
        9 => ErrorCodeOutOfMemory,
        999 => ErrorCodeUnknown,
        _ => throw ArgumentError('Unknown value for ErrorCode: $value'),
      };
}

enum WalSyncMode {
  WalSyncModeSync(0),
  WalSyncModePeriodic(1),
  WalSyncModeAsync(2);

  final int value;
  const WalSyncMode(this.value);

  static WalSyncMode fromValue(int value) => switch (value) {
        0 => WalSyncModeSync,
        1 => WalSyncModePeriodic,
        2 => WalSyncModeAsync,
        _ => throw ArgumentError('Unknown value for WalSyncMode: $value'),
      };
}

/// Result structure for returning data across FFI boundary
final class ByteResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> DATA;

  @ffi.UintPtr()
  external int LEN;

  @ffi.Int32()
  external int ERROR_CODE;
}

/// Key-value pair result for iterator
final class KeyValueResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> KEY;

  @ffi.UintPtr()
  external int KEY_LEN;

  external ffi.Pointer<ffi.Uint8> VALUE;

  @ffi.UintPtr()
  external int VALUE_LEN;

  @ffi.Int32()
  external int ERROR_CODE;
}
